--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,36 +1,63 @@
-# This is a basic workflow to help you get started with Actions
+name: Release
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  release:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Set up Git
+      run: |
+        git config user.email "youremail@example.com"
+        git config user.name "Your Name"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Determine the next version
+      run: |
+        current_version=$(cat version.txt)
+        new_version=$(semver bump patch $current_version)
+        echo "New version: $new_version"
+        echo $new_version > version.txt
+        echo "::set-output name=new_version::$new_version"
+        
+    - name: Commit version change
+      run: |
+        git add version.txt
+        git commit -m "Bump version to $new_version"
+        git push
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Create a release
+      id: create_release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          db/script.txt
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Get the release ID
+      run: |
+        release_id="${{ steps.create_release.outputs.id }}"
+        echo "::set-output name=release_id::$release_id"
+        
+    - name: Upload the script.txt
+      uses: actions/upload-artifact@v2
+      with:
+        name: script
+        path: db/script.txt
+
+    - name: Attach script.txt to the release
+      run: |
+        curl -sSL -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        -H "Content-Type: application/zip" \
+        --data-binary @"$GITHUB_WORKSPACE/db/script.txt" \
+        "https://uploads.github.com/repos/${GITHUB_REPOSITORY}/releases/${{ steps.create_release.outputs.id }}/assets?name=script.sql"
