--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,14 +15,15 @@ jobs:
 
     - name: Set up Git
       run: |
-        git config user.email "youremail@example.com"
-        git config user.name "Your Name"
+
+        git config user.email "prmkmrsingh@yahoo.in"
+        git config user.name "P1989singh"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Determine the next version
       run: |
-        current_version=$(cat version.txt)
+        current_version=$(cat ./.version.txt)
         new_version=$(semver bump patch $current_version)
         echo "New version: $new_version"
         echo $new_version > version.txt
