--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Determine the next version
       run: |
-        current_version=$(cat ./.version.txt)
+        current_version=$(cat "./.version.txt")
         new_version=$(semver bump patch $current_version)
         echo "New version: $new_version"
         echo $new_version > version.txt
