--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,10 +21,17 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Determine the next version
-      run: |
-        current_version=$(cat "./.version.txt")
+      run: | 
+        if [ -f ./.version.txt ]; then 
+          current_version=$(cat ./.version.txt)
+        else
+            current_version="1.0.0"  # Set an initial version
+            echo $current_version > ./.version.txt
+        fi
+        echo "Current Version: $current_version"
+      shell: bash
+    #    current_version=$(cat "./.version.txt")
         new_version=$(semver bump patch $current_version)
-        echo "New version: $new_version"
         echo $new_version > version.txt
         echo "::set-output name=new_version::$new_version"
         
