--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,15 +12,13 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
     - name: Set up Git
       run: |
         git config user.email "prmkmrsingh@yahoo.in"
         git config user.name "P1989singh"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Determine the next version
+    - name: Determine version
       run: | 
         if [ -f ./.version.txt ]; then 
           current_version=$(cat ./.version.txt)
@@ -31,7 +29,7 @@ jobs:
         echo "Current Version: $current_version"
       shell: bash
     #    current_version=$(cat "./.version.txt")
-        new_version=$(semver bump patch $current_version)
+      new_version=$(semver bump patch $current_version)
         echo $new_version > version.txt
         echo "::set-output name=new_version::$new_version"
         
