--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Install semver using npm
+      run: npm install -g semver
     - name: Set up Git
       run: |
         git config user.email "prmkmrsingh@yahoo.in"
