--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,7 +39,7 @@ jobs:
         git commit -m "Bump version to $new_version"
         git push
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
 
     - name: Create a release
       id: create_release
@@ -47,7 +47,7 @@ jobs:
       with:
         files: |
           db/script.txt
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GH_TOKEN }}
 
     - name: Get the release ID
       run: |
@@ -62,7 +62,7 @@ jobs:
 
     - name: Attach script.txt to the release
       run: |
-        curl -sSL -X POST -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+        curl -sSL -X POST -H "Authorization: token ${{ secrets.GH_TOKEN }}" \
         -H "Content-Type: application/zip" \
         --data-binary @"$GITHUB_WORKSPACE/db/script.txt" \
         "https://uploads.github.com/repos/${GITHUB_REPOSITORY}/releases/${{ steps.create_release.outputs.id }}/assets?name=script.sql"
