--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,7 +33,7 @@ jobs:
         echo $new_version > version.txt
         echo "::set-output name=new_version::$new_version"
         
-    - name: Commit version change
+    - name: Commit version changes
       run: |
         git add version.txt
         git commit -m "Bump version to $new_version"
